--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body {
   justify-content: center;
   min-height: 100vh;
 }
-.quis-container {
+.quiz-container {
   background-color: #ffff;
   min-width: 25rem;
   border-radius: 5px;
